# SickPoolAPI

./: Cargo.toml  todo
.github/workflows/: rust.yml
src/: api_data.rs  config.rs  main.rs  pool_events.rs  redis_interop.rs
src/routes/: block.rs  ftquery.rs  history.rs  miner.rs  mod.rs  network.rs  payout.rs  pool.rs  redis.rs  solver.rs  table_res.rs  types.rs
