[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }

actix-cors = "0.6.1"
redis = { version = "0.22.1", features = ["tokio-comp", "connection-manager"] }
redis_ts = { version = "0.5.0", features = ['tokio-comp'] }

env_logger = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.59"
serde_repr = "0.1"

mysql = "*"


#[patch]
# chartgen = { path = "/home/sickguy/.cargo/git/checkouts/chartgen-28545a3ad2ef82cf/7c2e54f/" }