[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4"}

actix-cors = "0.6.1"
ts-rs = "6.2"

redis = { version = "0.22.1", features = ["tokio-comp", "connection-manager"] }
# redis_ts = { version = "0.4.1", features = ['tokio-comp'] }
redis_ts = { git= "https://github.com/ISickMan/redis_ts", features = ["tokio-comp"] }
env_logger = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.59"

mysql = "*"
cxx = "1.0"
hex = "0.4"

#chartgen = { git = "https://github.com/ItsSickGuy/ChartGen" }
# sickpool = {git = "https://github.com/ItsSickGuy/SickPool"}

#[patch]
# chartgen = { path = "/home/sickguy/.cargo/git/checkouts/chartgen-28545a3ad2ef82cf/7c2e54f/" }